--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </section>
     <footer>
-         <p>&copy; CursoemVideo</p>
+         <p>&copy; Gustavo Ferreira</p>
     </footer>
     <script src="script.js"></script>
 </body>
